<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Первый список -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_action"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/click_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <!-- Второй список -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hold_action"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/hold_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <!-- Третий список -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press_action"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/press_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <!-- Четвёртый список -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_action"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/release_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start">

        <Button
            android:id="@+id/apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_button"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:layout_marginEnd="10dp"/>

        <ImageButton
            android:id="@+id/trash_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete_button"
            android:src="@drawable/ic_delete"/>

    </LinearLayout>
</LinearLayout>
