<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:gravity="center">

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:layout_marginEnd="10dp"/>

    <Button
        android:enabled="false"
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_button"
        android:layout_marginEnd="16dp" />

    <ImageButton
        android:id="@+id/trash_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete_button"
        android:src="@drawable/ic_delete"/>

</LinearLayout>

